# ai-analyser

./: .env.example  .gitignore  Makefile  docker-compose.dev.yml  docker-compose.yml  starter.tt  test.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_fix_schema.py  bca48482e055_initial.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  health.py  market.py  ws.py
backend/app/db/: engine.py
backend/app/db/models/: __init__.py  ai_reports.py  base.py  computed_metrics.py  feature_store.py  instruments.py  journal.py  market_ticks.py  ml_predictions.py  option_chain.py  scores.py  signals.py
backend/app/db/repositories/: base.py  option_chain_repo.py  tick_repo.py
backend/app/services/ai/: explanation_cache.py  groq_client.py  prompt_builder.py  report_generator.py
backend/app/services/alerts/: alert_manager.py  desktop_notifier.py  discord_notifier.py  email_notifier.py  telegram_notifier.py
backend/app/services/analytics/: compute_engine.py  metrics_publisher.py
backend/app/services/backtester/: backtest_report.py  metrics_calculator.py  replay_engine.py  strategy_runner.py
backend/app/services/cache/: market_cache.py  redis_client.py
backend/app/services/fyers/: __init__.py  auth.py  client.py  symbols.py  websocket.py
backend/app/services/ingestion/: data_manager.py  option_chain_fetcher.py  (+1 more)
backend/app/tasks/: __init__.py  ai_tasks.py  alert_tasks.py  analytics_tasks.py  celery_app.py
(+57 files in other folders)
