[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.139.2",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "fyers-apiv3>=3.0.0",
    "groq>=0.9.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
    "catboost>=1.2.0",
    "joblib>=1.3.0",
    "python-dotenv>=1.2.2",
    "websockets>=16.1.1",
]
